# metric_space

./: .gitignore  README.md  pyproject.toml
src/metric_genhierarchy/: __init__.py  main.py  utils.py
src/metric_genhierarchy/core/: __init__.py  metric_space.py
src/metric_genhierarchy/impl/: __init__.py  protein.py  vector.py
src/metric_genhierarchy/query/: __init__.py  linear_scan.py  pivot_table.py
tests/: pivottable_benchmark.py  queries_protein_yeast.json  queries_vector_texas.json
