[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "metric_genhierarchy"
version = "0.1.0"
description = "大数据泛构-度量空间数据处理系统"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Yi Li", email = "3120252145@bit.edu.cn"}
]

dependencies = [
    "tqdm>=4.65.0",
]

[project.optional-dependencies]
dev = [
    "black>=23.0",
]


[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"